--- a/apps/my-blog/tsconfig.app.json
+++ b/apps/my-blog/tsconfig.app.json
@@ -11,5 +11,5 @@
       "src/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "vite.config.ts"]
 }
