--- a/apps/my-blog/package.json
+++ b/apps/my-blog/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
-    "shared": "workspace:*",
     "preset": "workspace:*",
+    "shared": "workspace:*",
     "tailwindcss": "^4.0.3",
     "vue": "catalog:",
     "vue-router": "catalog:"
   },
   "devDependencies": {
+    "@vicons/ionicons5": "^0.13.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/tsconfig": "^0.7.0",
+    "naive-ui": "^2.41.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
     "vue-tsc": "^2.2.0"
