--- a/apps/my-blog/package.json
+++ b/apps/my-blog/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "@toast-ui/editor": "^3.2.2",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "preset": "workspace:*",
+    "prismjs": "^1.29.0",
     "shared": "workspace:*",
     "tailwindcss": "^4.0.3",
     "vue": "catalog:",
@@ -25,6 +28,7 @@
     "naive-ui": "^2.41.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
+    "vite-plugin-markdown": "^2.2.0",
     "vue-tsc": "^2.2.0"
   }
 }
