--- a/apps/my-blog/package.json
+++ b/apps/my-blog/package.json
@@ -26,6 +26,7 @@
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
     "vite-plugin-markdown": "^2.2.0",
+    "vite-plugin-qiankun": "^1.0.15",
     "vue-tsc": "^2.2.0"
   }
 }
