--- a/apps/my-blog2/package.json
+++ b/apps/my-blog2/package.json
@@ -10,13 +10,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxtjs/tailwindcss": "6.13.1",
     "@types/node": "^18.19.75",
     "nuxt": "^3.15.4",
-    "preset": "workspace:*"
+    "preset": "workspace:*",
+    "tailwindcss": "catalog:"
   },
   "dependencies": {
     "@nuxt/content": "^2.13.4",
+    "@tailwindcss/vite": "^4.0.7",
     "clipboard": "^2.0.11",
     "less": "^4.2.2",
     "less-loader": "^11.1.4",
