--- a/apps/my-react-app/.vscode/settings.json
+++ b/apps/my-react-app/.vscode/settings.json
@@ -107,5 +107,9 @@
     "exchangezone",
     "moboshort",
     "myearnings"
-  ]
+  ],
+  "css.validate": false,
+  "tailwindCSS.includeLanguages": {
+    "vue": "html"
+  }
 }
