--- a/apps/my-blog2/package.json
+++ b/apps/my-blog2/package.json
@@ -16,13 +16,16 @@
     "tailwindcss": "catalog:"
   },
   "dependencies": {
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@nuxt/content": "^2.13.4",
     "@tailwindcss/vite": "^4.0.7",
     "clipboard": "^2.0.11",
     "less": "^4.2.2",
     "less-loader": "^11.1.4",
     "lodash-es": "^4.17.21",
+    "md-editor-v3": "^5.3.2",
     "minisearch": "^7.1.1",
+    "openai": "^4.86.1",
     "qiankun": "^2.10.16",
     "three": "^0.154.0",
     "vue-lazyload": "^3.0.0"
