--- a/apps/my-blog/tsconfig.app.json
+++ b/apps/my-blog/tsconfig.app.json
@@ -11,5 +11,11 @@
       "src/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "vite.config.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "vite.config.ts",
+    "src/lib/sandbox.js"
+  ]
 }
