--- a/apps/my-blog/package.json
+++ b/apps/my-blog/package.json
@@ -14,6 +14,7 @@
     "preset": "workspace:*",
     "shared": "workspace:*",
     "tailwindcss": "^4.0.3",
+    "vite-auto-i18n-plugin": "^1.0.7",
     "vue": "catalog:",
     "vue-router": "catalog:"
   },
