--- a/apps/my-blog2/package.json
+++ b/apps/my-blog2/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@originjs/vite-plugin-federation": "^1.3.9",
     "@types/node": "^18.19.75",
     "nuxt": "^3.15.4",
     "preset": "workspace:*",
