--- a/apps/my-react-app/package.json
+++ b/apps/my-react-app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "ts-loader": "^9.5.2"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "style-loader": "^4.0.0",
     "typescript": "^5.7.3",
     "webpack": "^5.97.1",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
   }
