--- a/apps/my-react-app/package.json
+++ b/apps/my-react-app/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
+    "redux-thunk": "^3.1.0",
     "ts-loader": "^9.5.2"
   },
   "devDependencies": {
@@ -21,6 +24,7 @@
     "@babel/preset-env": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
     "@types/css-modules": "^1.0.5",
+    "@types/node": "^18.19.75",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "babel-loader": "^9.2.1",
