--- a/package.json
+++ b/package.json
@@ -7,29 +7,13 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "prepare": "husky",
-    "common": "pnpm --filter common",
-    "app": "pnpm --filter web-app",
-    "shared": "pnpm --filter shared",
-    "shared:build": "pnpm --filter shared build",
-    "shared:dev": "pnpm --filter shared dev",
-    "vite-app": "pnpm --filter my-vite-app",
-    "vite-app:dev": "pnpm --filter my-vite-app dev",
-    "vite-app:build": "pnpm --filter my-vite-app build:prod",
-    "vue2-app": "pnpm --filter my-vue2-app",
-    "vue2-app:dev": "pnpm --filter my-vue2-app dev",
-    "vue2-app:build": "pnpm --filter my-vue2-app build",
-    "react-app": "pnpm --filter my-react-app",
-    "react-app:dev": "pnpm --filter my-react-app dev",
-    "react-app:build": "pnpm --filter my-react-app build",
-    "blog": "pnpm --filter my-blog",
-    "blog:dev": "pnpm --filter my-blog dev",
-    "blog:build": "pnpm --filter my-blog build",
     "webp": "node bin/webp.mjs",
     "config:sync": "find apps -mindepth 1 -maxdepth 1 -type d -exec mkdir -p {}/.vscode/ \\; -exec cp .vscode/*.json {}/.vscode/ \\;",
     "rm-modules": "find . -type d -name 'node_modules' -exec rm -rf {} \\;",
     "build:all": "pnpm -r build",
-    "dev:all": "pnpm -r dev",
-    "dev:sub-apps": "pnpm --parallel --filter my-vite-app --filter my-react-app --filter my-vue2-app dev"
+    "dev:all-apps": "pnpm -r --parallel --workspace-concurrency=4 dev",
+    "dev:sub-apps": "pnpm --parallel --filter my-vite-app --filter my-react-app --filter my-vue2-app dev",
+    "dev:main-app": "pnpm --filter my-blog dev"
   },
   "keywords": [
     "micro-frontend",
